# python-group-project

./: .gitignore  LICENSE.txt  README.md  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements_dev.txt  search.html  searchindex.js  setup.cfg  tox.ini  wine_data_analysis.html
.doctrees/: environment.pickle  index.doctree  modules.doctree  wine_data_analysis.doctree
.doctrees/notebooks/: wine_data_analysis.doctree
.github/workflows/: docs.yml  tests.yml
_modules/: index.html
_modules/wine_data_analysis/: classify_wine_data.html  download_wine_data.html  visualize_wine_data.html
_sources/: index.rst
_sources/notebooks/: wine_data_analysis.ipynb
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/output/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/source/: conf.py  index.rst
doctrees/: environment.pickle  wine_data_analysis.doctree
doctrees/notebooks/: wine_data_analysis.doctree
html/: genindex.html  py-modindex.html  search.html  searchindex.js  wine_data_analysis.html
html/_sources/: modules.rst  wine_data_analysis.rst
jupyter_execute/notebooks/: wine_data_analysis.ipynb
notebooks/: wine_data_analysis.html
tests/: test_classify_wine_data.py  test_visualize_wine_data.py
wine_data_analysis/: classify_wine_data.py  download_wine_data.py  visualize_wine_data.py
(+30 files in other folders)
