%% pyproject.toml

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "wine_data_analysis"
version = "0.0.1"
requires-python = ">=3.6"
dependencies = ["matplotlib>=3.5.1",
                "numpy>=1.15.1",
                "pandas>=1.3.5",
                "Requests==2.31.0",
                "scikit_learn==1.4.1.post1",
                "seaborn==0.13.2",
                "setuptools>=40.2.0"]

[project.optional-dependencies]
dev = ["pytest ~= 7.1.2"]