[metadata]
name = wine_data_analysis
description = Wine Data Analysis
url = https://github.com/vicrudakov/python-group-project
author = Elina Sukhanova, Viktor Rudakov, Maria Levina
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11.7
    Programming Language :: Python :: 3.12.0

[options]
python_requires = >=3.6
packages = wine_data_analysis
install_requires =
    matplotlib>=3.5.1
    numpy>=1.15.1
    pandas>=1.3.5
    Requests==2.31.0
    scikit_learn==1.4.1.post1
    seaborn==0.13.2
    setuptools>=40.2.0

[options.extras_require]
testing =
    tox >= 3.24
    pytest >= 6.0
    pytest-cov >= 2.10.0

docs =
    sphinx >= 5.1.0
    sphinx-book-theme>=0.2.0
    numpydoc >= 1.2.1
    myst_nb >= 0.13.1
    sphinx_design >= 0.4.1